--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
+    "terminal.integrated.fontFamily": "Menlo for Powerline",
+    "terminal.integrated.shell.osx": "/bin/zsh",
+
+    "workbench.colorTheme": "Material Theme Darker",
+    "workbench.iconTheme": "eq-material-theme-icons-darker",
+    
+    "python.pythonPath": "python3",
+    "python.jediEnabled": false,
+    "python.linting.flake8Enabled": false,
     "python.formatting.provider": "yapf"
 }
