--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "terminal.integrated.fontFamily": "Menlo for Powerline",
     "terminal.integrated.shell.osx": "/bin/zsh",
 
-    "workbench.colorTheme": "Material Theme Darker",
+    "workbench.colorTheme": "Material Theme Darker High Contrast",
     "workbench.iconTheme": "eq-material-theme-icons-darker",
     
     "python.pythonPath": "python3",
