--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     
     "python.pythonPath": "python3",
     "python.jediEnabled": false,
-    "python.linting.flake8Enabled": false,
+    "python.linting.flake8Enabled": true,
     "python.formatting.provider": "yapf",
-    "python.linting.pylintEnabled": false
+    "python.linting.pylintEnabled": true
 }
