--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,6 @@
     "python.pythonPath": "python3",
     "python.jediEnabled": false,
     "python.linting.flake8Enabled": false,
-    "python.formatting.provider": "yapf",
+    "python.formatting.provider": "autopep8",
     "python.linting.pylintEnabled": false,
 }
