--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,11 @@
 {
     "terminal.integrated.fontFamily": "Menlo for Powerline",
     "terminal.integrated.shell.osx": "/bin/zsh",
-
     "workbench.colorTheme": "Material Theme Darker High Contrast",
     "workbench.iconTheme": "eq-material-theme-icons-darker",
-    
     "python.pythonPath": "python3",
     "python.jediEnabled": false,
-    "python.linting.flake8Enabled": false,
-    "python.formatting.provider": "yapf",
-    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.formatting.provider": "autopep8",
+    "python.linting.pylintEnabled": true,
 }
